[tool.poetry]
name = "tweepyclean"
version = "0.1.0"
description = "Python package that builds ontop of the existing Tweepy package to provide data cleaning and processing functionality."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]

python = "^3.8"
altair = "^4.1.0"
nltk = "^3.5"
textstat = "^0.7.0"
emoji = "^1.2.0"
tweepy = "^3.10.0"
pytest = "^6.2.2"
python-semantic-release = "^7.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "<package_name>/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
